@@ -343,6 +343,25 @@ where '<name>' is one of the applications seen with the \fFapp list\fR command.
 User's may also specify \fBall\fR to see the profiles for all known
 applications.
 
+Syntax for the application profiles is a simple .INI format:
+
+  [<name>]
+  title=<title>
+  description=<description>
+  ports=<ports>
+
+The 'ports' field may specify a comma-separated list of ports/protocols where
+the protocol is optional. A range may be specified with 'start:end' and when
+a range is specified the protocol is required. For example:
+
+  [SomeService]
+  title=Some title
+  desctiption=Some description
+  ports=123/udp,45,67:89/tcp
+
+In the above example, 'SomeService' may be used in app rules and it specifies
+UDP port 123, TCP and UDP on port 45 and TCP ports 67-89 inclusive.
+
 After creating or editing an application profile, user's can run:
 
   ufw app update <name>
