@@ -64,6 +64,8 @@ ufw (0.34) UNRELEASED; urgency=low
   * support ./setup.py build (LP: #819600)
   * clarify log level behavior in ufw.8 (LP: #1461701)
   * support concurrent updates (LP: #1204579)
+  * skip profiles with invalid multiport declaration (LP: #1201934)
+  * add app profile syntax to ufw.8
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 17 Jul 2015 17:12:43 -0500
 
